--- a/_output.yml
+++ b/_output.yml
@@ -4,13 +4,13 @@ bookdown::gitbook:
     toc:
       toc_depth: 1
       before: |
-        <li><a href="./">SciFi</a></li>
+        <li><a href="./">Целься в Луну</a></li>
       after: |
         <li><em><a href="https://bipoliarnayazvezda.github.io/" target="blank">Александра Булгакова</a></em></li>
     download:
-      - ["scifi.epub", "EPUB"]
-      - ["scifi.docx", "DOCX"]
-      - ["scifi.pdf", "PDF"]
+      - ["moon.epub", "EPUB"]
+      - ["moon.docx", "DOCX"]
+      - ["moon.pdf", "PDF"]
     search:
       engine: lunr
     edit : null
